Improve dark mode colors transitions and fix bugs
- Fix bug where placeholder project page was being shown when url was directly accessed (now shows Error Page)
- Improve dark mode colors to change smoothly throughout all page
- Fix bug where todo Item component crashed if url was accessed directly even to an existing project

--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -19,6 +19,7 @@
         letter-spacing: .035rem;
         z-index: 1;
         background-color: var(--app-input-box-color);
+        transition: background-color .2s ease-in-out, border .2s ease-in-out;
 
         &:focus {
             outline: .05rem solid var(--app-primary-support-color);
@@ -40,15 +41,17 @@
         cursor: pointer;
         font-size: 1.05rem;
         font-weight: bold;
-        transition: all .1s ease-in-out;
+        transition: all .2s ease-in-out;
         z-index: 1;
 
         &:active {
             scale: .9;
+            transition: all .1s ease-in-out;
         }
 
         &:hover {
             background-color: var(--app-link-border-color);
+            transition: all .1s ease-in-out;
         }
     }
 }
