--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -12,6 +12,7 @@
         font-size: 2rem;
         margin: 0;
         color: var(--app-text-color);
+        transition: all .2s ease-in-out;
     }
     
     .home_projects_container {
@@ -77,6 +78,7 @@
                     border: .01rem solid var(--app-special-support-color);
                     box-shadow: 0 0 .1rem var(--app-general-box-shadow-color);
                     background-color: var(--app-input-box-color);
+                    transition: background-color .2s ease-in-out, border .2s ease-in-out;
 
                     &:focus {
                         box-shadow: 0 0 .25rem var(--app-general-box-shadow-color);
@@ -93,6 +95,7 @@
                     padding: .2rem .5rem;
                     width: 25%;
                     cursor: pointer;
+                    transition: all .2s ease-in-out;
                 }
             }
 
@@ -124,7 +127,7 @@
                     -webkit-box-orient: vertical;
                     -webkit-line-clamp: 2;
                     overflow: hidden;
-                    
+                    transition: all .2s ease-in-out;
                 }
 
                 .project_date_text {
@@ -132,6 +135,7 @@
                     font-size: .75rem;
                     font-weight: lighter;
                     color: var(--app-text-support-color);
+                    transition: all .2s ease-in-out;
                 }
             }
 
