--- a/src/pages/Project/Project.module.scss
+++ b/src/pages/Project/Project.module.scss
@@ -14,6 +14,7 @@
         font-weight: bold;
         margin: 0;
         color: var(--app-text-color);
+        transition: all .2s ease-in-out;
     }
 
     .project_main_content {
@@ -37,7 +38,7 @@
     max-height: 100%;
     gap: 1.25rem;
     padding: 1rem;
-    transition: all .9s ease-in-out;
+    transition: all .2s ease-in-out;
     border-radius: .25rem;
     overflow-y: auto;
 
@@ -46,12 +47,14 @@
         justify-content: space-between;
         align-items: center;
         padding: 0 1rem 1rem 1rem;
+        transition: all .2s ease-in-out;
 
         h3 {
             margin: 0;
             text-transform: capitalize;
             font-size: 1.45rem;
             color: var(--app-text-color);
+            transition: all .2s ease-in-out;
         }
 
         .tab_top_row_utils_container {
@@ -69,6 +72,7 @@
                         box-shadow: 0 0 .225rem var(--app-general-box-shadow-color);
                         font-family: 'Roboto', sans-serif;
                         background-color: var(--app-input-box-color);
+                        transition: background-color .2s ease-in-out, border .2s ease-in-out;
                 
                         &:focus {
                             box-shadow: 0 0 .4rem var(--app-general-box-shadow-color);
@@ -84,10 +88,12 @@
 
                 .sort_button_container {
                     padding: .075rem;
+                    transition: all .2s ease-in-out;
 
                     i {
                         font-size: 1.2rem;
                         cursor: pointer;
+                        transition: all .2s ease-in-out;
                     }
                 }
             }
@@ -282,6 +288,7 @@
                 border: .01rem solid var(--app-intermediate-color);
                 box-shadow: 0 0 .15rem var(--app-general-box-shadow-color);
                 background-color: var(--app-input-box-color);
+                transition: background-color .2s ease-in-out, border .2s ease-in-out;
 
                 &:focus {
                     box-shadow: 0 0 .3rem var(--app-general-box-shadow-color);
@@ -297,6 +304,7 @@
                 border-radius: .25rem;
                 padding: .2rem .5rem;
                 cursor: pointer;
+                transition: all .2s ease-in-out;
             }
         }
 
@@ -307,6 +315,7 @@
             font-size: 1.05rem;
             letter-spacing: .015rem;
             line-height: 1.35rem;
+            transition: all .2s ease-in-out;
         }
 
         .todo_item_btn_container {
